[package]
authors = ["Nick Massey <nickmass@nickmass.com>"]
name = "mass-dyndns"
version = "0.1.0"
edition = "2018"

[dependencies]
env_logger = "0.6"
failure = "0.1"
futures = "0.1"
hyper = "0.12"
log = "0.4"
rusoto_core = "0.36"
rusoto_route53 = "0.36"
rusoto_credential = "0.15"
serde = "1.0"
serde_derive = "1.0"
url = "1.7"
base64 = "0.10.1"
toml = "0.4.10"
