[package]
authors = ["Nick Massey <nickmass@nickmass.com>"]
name = "mass-dyndns"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.9"
hyper = {version = "0.14", features = ["server", "http1", "http2"]}
log = "0.4"
rusoto_core = "0.48"
rusoto_route53 = "0.48"
rusoto_credential = "0.48"
serde = "1.0"
serde_derive = "1.0"
url = "2.2"
base64 = "0.13.0"
toml = "0.5.9"
thiserror = "1.0.24"
tokio = {version = "1.6.0", features = ["full"]}
clap = {version = "3.1", features = ["derive"]}
